@@ -1,4 +1,6 @@
-﻿using System.ComponentModel;
+﻿using System;
+using System.ComponentModel;
+using System.Text;
 using System.Windows;
 using System.Windows.Forms;
 using DW.WPFToolkit.Controls;
@@ -24,8 +26,9 @@ namespace DW.WPFToolkit.Tryout
 
         private void AddClick(object sender, RoutedEventArgs e)
         {
-            WPFMessageBox.Show(null, "text", "title", WPFMessageBoxButtons.YesNo, WPFMessageBoxImage.Information, WPFMessageBoxResult.OK, new WPFMessageBoxOptions());
-            System.Windows.Forms.MessageBox.Show("text", "title", MessageBoxButtons.YesNo, MessageBoxIcon.Information);
+            var message = "Dies ist der Text der in der MessageBox angezeigt wird." + Environment.NewLine + Environment.NewLine + "Inklusive Newlines.";
+            WPFMessageBox.Show(null, message, "title", WPFMessageBoxButtons.YesNo, WPFMessageBoxImage.Information, WPFMessageBoxResult.OK, new WPFMessageBoxOptions());
+            System.Windows.Forms.MessageBox.Show(message, "title", MessageBoxButtons.YesNo, MessageBoxIcon.Information);
         }
     }
 }
